--- a/product-tec9.html
+++ b/product-tec9.html
@@ -4,11 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="stylesproduct.css">
+    <link rel="stylesheet" href="./styles-product.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <title>Producto</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+    <title>Inicio</title>
 </head>
 
 <body>
@@ -23,7 +26,7 @@
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse align-items-center" id="navbarNav">
                 <ul class="navbar-nav mx-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="pistolas.html">Pistolas</a>
@@ -50,7 +53,7 @@
                     <i class="fa-solid fa-shopping-cart" style="color: #573b8a;"></i>
                 </a>
                 <a href="">
-                    <i class="fa-solid fa-screwdriver-wrench"style="color: #573b8a;"></i>
+                    <i class="fa-solid fa-screwdriver-wrench" style="color: #573b8a;"></i>
                 </a>
             </div>
             <div class="navbar-login">
@@ -60,31 +63,39 @@
             </div>
         </nav>
     </header>
-    <section class="product">
-        <div class="product__photo">
-            <div class="photo-main">
-                <img src="img/tec-9.png" alt="green apple slice">
-            </div>
-        </div>
-        <div class="product__info">
-            <div class="title">
-                <h1>TEC-9</h1>
-            </div>
-            <div class="price">
-                USD$ <span>500</span>
-            </div>
-            <div class="description">
-                <h3>Sobre el arma:</h3>
-                <p>La Tec-9, una leyenda en el mundo de las armas de fuego, es una pistola semiautomática conocida por
-                    su diseño distintivo y su capacidad de fuego rápido. Fabricada para rendimiento y fiabilidad, esta
-                    arma es preferida por profesionales de la seguridad, entusiastas del tiro y coleccionistas por
-                    igual. Con su ergonomía mejorada y su facilidad de manejo, la Tec-9 ofrece precisión y potencia en
-                    cada disparo.</p>
-            </div>
-            <button class="buy--btn" data-toggle="modal" data-target="#exampleModalCenter">Añadir al carro</button>
-        </div>
-    </section>
 
+    <div class="container">
+        <div class="card">
+            <div class="row">
+                <div class="col-md-6 text-center align-self-center"> <img class="img-fluid" src="img/tec-9.png"> </div>
+                <div class="col-md-6 info">
+                    <div class="row title">
+                        <div class="col">
+                            <h2>Tec-9</h2>
+                        </div>
+                        <div class="col text-right"><a href="#"><i class="fa fa-heart-o"></i></a></div>
+                    </div>
+                    <p>La Tec-9, una leyenda en el mundo de las armas de fuego, es una pistola semiautomática conocida
+                        por
+                        su diseño distintivo y su capacidad de fuego rápido. Fabricada para rendimiento y fiabilidad,
+                        esta
+                        arma es preferida por profesionales de la seguridad, entusiastas del tiro y coleccionistas por
+                        igual. Con su ergonomía mejorada y su facilidad de manejo, la Tec-9 ofrece precisión y potencia
+                        en
+                        cada disparo.</p> <span class="fa fa-star checked"></span> <span
+                        class="fa fa-star checked"></span> <span class="fa fa-star checked"></span> <span
+                        class="fa fa-star checked"></span> <span class="fa fa-star-half-full"></span> <span
+                        id="reviews">1590 Reviews</span>
+                    <div class="price">$500</div>
+                </div>
+            </div>
+            <div class="row lower">
+                <div class="col text-right align-self-center">
+                    <button class="btn">Añadir al carro</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
