--- a/admin-pedidos.html
+++ b/admin-pedidos.html
@@ -2,9 +2,9 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Usuarios</title>
+  <title>Pedidos</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel="stylesheet" href="./style-admin.css">
+<link rel="stylesheet" href="./css/style-admin.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
 integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -54,31 +54,60 @@ integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEw
   </div>
   <div class="app-content">
     <div class="app-content-header">
-      <h1 class="app-content-headerText">Usuarios</h1>
+      <h1 class="app-content-headerText">Pedidos</h1>
+      <button class="app-content-headerButton">Añadir Pedido</button>
     </div>
     <div class="products-area-wrapper tableView">
       <div class="products-header">
-        <div class="product-cell image">
-          Nombre
-          <button class="sort-button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 512 512"><path fill="currentColor" d="M496.1 138.3L375.7 17.9c-7.9-7.9-20.6-7.9-28.5 0L226.9 138.3c-7.9 7.9-7.9 20.6 0 28.5 7.9 7.9 20.6 7.9 28.5 0l85.7-85.7v352.8c0 11.3 9.1 20.4 20.4 20.4 11.3 0 20.4-9.1 20.4-20.4V81.1l85.7 85.7c7.9 7.9 20.6 7.9 28.5 0 7.9-7.8 7.9-20.6 0-28.5zM287.1 347.2c-7.9-7.9-20.6-7.9-28.5 0l-85.7 85.7V80.1c0-11.3-9.1-20.4-20.4-20.4-11.3 0-20.4 9.1-20.4 20.4v352.8l-85.7-85.7c-7.9-7.9-20.6-7.9-28.5 0-7.9 7.9-7.9 20.6 0 28.5l120.4 120.4c7.9 7.9 20.6 7.9 28.5 0l120.4-120.4c7.8-7.9 7.8-20.7-.1-28.5z"/></svg>
-          </button>
-        </div>
-        <div class="product-cell category">Correo<button class="sort-button">
-            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 512 512"><path fill="currentColor" d="M496.1 138.3L375.7 17.9c-7.9-7.9-20.6-7.9-28.5 0L226.9 138.3c-7.9 7.9-7.9 20.6 0 28.5 7.9 7.9 20.6 7.9 28.5 0l85.7-85.7v352.8c0 11.3 9.1 20.4 20.4 20.4 11.3 0 20.4-9.1 20.4-20.4V81.1l85.7 85.7c7.9 7.9 20.6 7.9 28.5 0 7.9-7.8 7.9-20.6 0-28.5zM287.1 347.2c-7.9-7.9-20.6-7.9-28.5 0l-85.7 85.7V80.1c0-11.3-9.1-20.4-20.4-20.4-11.3 0-20.4 9.1-20.4 20.4v352.8l-85.7-85.7c-7.9-7.9-20.6-7.9-28.5 0-7.9 7.9-7.9 20.6 0 28.5l120.4 120.4c7.9 7.9 20.6 7.9 28.5 0l120.4-120.4c7.8-7.9 7.8-20.7-.1-28.5z"/></svg>
-          </button></div>
+        <div class="product-cell id">ID</div>
+        <div class="product-cell date">Fecha de compra</div>
+        <div class="product-cell total">Total</div>
+        <div class="product-cell email">Email Cliente</div>
+        <div class="product-cell status">Estado</div>
       </div>
       <div class="products-row">
-        <button class="cell-more-button">
-          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical"><circle cx="12" cy="12" r="1"/><circle cx="12" cy="5" r="1"/><circle cx="12" cy="19" r="1"/></svg>
-        </button>
           <div class="product-cell image">
-            <img src="img/tec-9.png" alt="product">
-            <span>Cristobal Retamal</span>
+            <span>001</span>
           </div>
-        <div class="product-cell category"><span class="cell-label">Categoria:</span>cri.retamalv@gmail.com</div>
+          <div class="product-cell date"><span class="cell-label">Fecha</span>2024-05-22</div>
+          <div class="product-cell total"><span class="cell-label">Total</span>$1000</div>
+          <div class="product-cell email"><span class="cell-label">Email</span>cri.retamalv@duocuc.cl</div>
+          <div class="product-cell status"><span class="cell-label">Estado</span>Preparando</div>
         <div class="mt-2"><button class="btn btn-danger me-2 adminbtn">Eliminar</button><button class="btn btn-success adminbtn">Modificar</button></div>
       </div>
+
+      <div class="products-row">
+        <div class="product-cell image">
+          <span>002</span>
+        </div>
+        <div class="product-cell date"><span class="cell-label">Fecha</span>2024-05-07</div>
+        <div class="product-cell total"><span class="cell-label">Total</span>$1500</div>
+        <div class="product-cell email"><span class="cell-label">Email</span>cri.retamalv@duocuc.cl</div>
+        <div class="product-cell status"><span class="cell-label">Estado</span>Preparando</div>
+      <div class="mt-2"><button class="btn btn-danger me-2 adminbtn">Eliminar</button><button class="btn btn-success adminbtn">Modificar</button></div>
+    </div>
+
+    <div class="products-row">
+      <div class="product-cell image">
+        <span>003</span>
+      </div>
+      <div class="product-cell date"><span class="cell-label">Fecha</span>2024-05-10</div>
+      <div class="product-cell total"><span class="cell-label">Total</span>$500</div>
+      <div class="product-cell email"><span class="cell-label">Email</span>cri.retamalv@duocuc.cl</div>
+      <div class="product-cell status"><span class="cell-label">Estado</span>Preparando</div>
+    <div class="mt-2"><button class="btn btn-danger me-2 adminbtn">Eliminar</button><button class="btn btn-success adminbtn">Modificar</button></div>
+  </div>
+
+  <div class="products-row">
+    <div class="product-cell image">
+      <span>004</span>
+    </div>
+    <div class="product-cell date"><span class="cell-label">Fecha</span>2024-05-17</div>
+    <div class="product-cell total"><span class="cell-label">Total</span>$1500</div>
+    <div class="product-cell email"><span class="cell-label">Email</span>cri.retamalv@duocuc.cl</div>
+    <div class="product-cell status"><span class="cell-label">Estado</span>Preparando</div>
+  <div class="mt-2"><button class="btn btn-danger me-2 adminbtn">Eliminar</button><button class="btn btn-success adminbtn">Modificar</button></div>
+</div>
     </div>
   </div>
 </div>
