--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Formulario de Registro / Inicio de Sesión</title>
-  <link rel="stylesheet" href="./styles-login.css">
+  <link rel="stylesheet" href="./css/styles-login.css">
   <script src="/js/validate-login.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
